    starting Octave from command line were expecting the command line
    interface and Desktop launchers required the `--force-gui' option
    anyway.  With this change, desktop launchers should change to use
    the new option `--gui'.  The previous `--force-gui' will continue to
    work and maps to `--gui' but will be removed in Octave 4.8.

 ** A new container data type--containers.Map--is available.  Map is a
    key/value storage container (a.k.a, a hash) that efficiently allows
    storing and retrieving values by name, rather than by position which
    is how arrays work.

 ** The bareword "import" is now recognized in scripts and functions.
    However, the functionality to import functions and classes from
    other namespaces into the local scope has not yet been implemented.
    Attempting to use "import" will provoke an error message.

 ** hex2num and num2hex now work for integer and char types and num2hex
    may optionally return a cell array of strings instead of a character
    array.  If given a cell array of strings, hex2num now returns a
    numeric array of the same size as the input cell array.  Previously,
    hex2num would accept a cell array of strings of arbitrary dimension
    but would always return a column vector.

 ** New special functions cosint, sinint, and gammaincinv have been added.

 ** Special functions in Octave have been rewritten for larger input
    domains, better accuracy, and additional options.
    * gammainc now accepts negative real values for X.
    * improved accuracy for gammainc, betainc, betaincinv, expint.
    * gammainc has new options "scaledlower" and "scaledupper".
    * betainc, betaincinv have new option "upper".

 ** The "names" option used in regular expressions now returns a struct
    array, rather than a struct with a cell array for each field.  This
    change was made for Matlab compatibility.

 ** The quadcc function now uses both absolute tolerance and relative